apps/mautrix/meta/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-meta
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: matrix-meta
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: synapse
      ports:
        - port: http
